Begin configuring image attachments for emails